<resources>
    <string name="app_name">Real Estate Manager</string>

    <string name="menu_item_add">Add</string>
    <string name="menu_item_close">Close</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_filter">Filter</string>

    <string name="undefined_price">Undefined price</string>
    <string name="price_in_dollars">$%s</string>

    <string name="toolbar_title_detail">Detail</string>
    <string name="no_real_estate_selected">Select a real estate in the list to display its detailed info.</string>
    <string name="unknown_real_estate_selected">ERROR! No real estate exists with this ID: "%d".</string>

    <string name="toolbar_title_add">Add a real estate</string>
    <string name="toolbar_title_edit">Edit real estate</string>
    <string name="toolbar_title_edit_picture">Edit picture</string>

    <string name="button_text_next">Next</string>
    <string name="button_text_save">Save</string>

    <string name="exit_form_dialog_title">Exit form</string>
    <string name="exit_add_form_dialog_message">Keep modifications in memory?</string>
    <string name="exit_edit_form_dialog_message">Save modifications?</string>
    <string name="exit_form_dialog_positive_button">Yes, save modifications</string>
    <string name="exit_form_dialog_negative_button">No, discard modifications</string>

    <string name="draft_form_dialog_title">There is a real estate saved in memory</string>
    <string name="draft_form_dialog_message">You have partially added a \'%s\'. Do you want to resume it?</string>
    <string name="draft_form_dialog_positive_button">Yes, resume it</string>
    <string name="draft_form_dialog_negative_button">No, start a new one</string>

    <string name="image_picker_dialog_title">Pick an image</string>
    <string name="image_picker_dialog_gallery_item">From gallery</string>
    <string name="image_picker_dialog_camera_item">From camera</string>

    <string name="real_estate_type_flat">Flat</string>
    <string name="real_estate_type_house">House</string>
    <string name="real_estate_type_duplex">Duplex</string>
    <string name="real_estate_type_penthouse">Penthouse</string>
    <string name="hint_type">Type</string>
    <string name="hint_price">Price</string>
    <string name="hint_area">Surface</string>
    <string name="label_total_room">Number of rooms</string>
    <string name="label_bathroom">Number of bathrooms</string>
    <string name="label_bedroom">Number of bedrooms</string>
    <string name="hint_description">Description</string>
    <string name="hint_address_street">Street name &amp; house number</string>
    <string name="hint_address_additional">Additional information</string>
    <string name="hint_address_city">City</string>
    <string name="hint_address_state">State</string>
    <string name="hint_address_zipcode">Zipcode</string>
    <string name="hint_address_country">Country</string>
    <string name="label_points_of_interest">Points of interest</string>
    <string name="label_poi_school">School</string>
    <string name="label_poi_university">University</string>
    <string name="label_poi_stadium">Stadium</string>
    <string name="label_poi_movie_theater">Movie theater</string>
    <string name="label_poi_restaurant">Restaurant</string>
    <string name="label_poi_bar">Bar</string>
    <string name="label_poi_cafe">Cafe</string>
    <string name="label_poi_shopping_mall">Shopping_mall</string>
    <string name="label_poi_park">Park</string>
    <string name="label_poi_hospital">Hospital</string>
    <string name="label_poi_train_station">Train station</string>
    <string name="label_poi_subway_station">Subway station</string>
    <string name="hint_status">Available for sale</string>
    <string name="hint_market_entry_date">Market entry date</string>
    <string name="hint_sale_date">Sale date</string>
    <string name="hint_agent">Real estate agent</string>
    <string name="picker_title_market_entry">Select the market entry date</string>
    <string name="picker_title_sale">Select the sale date</string>

    <string name="description_button_add">Add button</string>
    <string name="description_button_remove">Remove button</string>
    <string name="description_button_add_photo">Add photo button</string>
    <string name="description_picture">Picture</string>
    <string name="real_estate_photo">Real estate photo</string>

    <string name="error_no_image">Please select an image</string>

    <string name="error_mandatory_field">Mandatory field</string>
    <string name="error_empty_photo_list">Please select at least one photo</string>
    <string name="error_unknown_state">Unknown state</string>
    <string name="error_incomplete_zipcode">Incomplete zipcode</string>
    <string name="error_inconsistent_date_order">Inconsistent date order</string>

    <string name="for_sale">For sale</string>
    <string name="sold">Sold</string>
    <string name="media">Media</string>
    <string name="not_available">N/A</string>
    <string name="square_meters">%d sq m</string>
    <string name="location">Location</string>
    <string name="on_market">On the market</string>
    <string name="since_date">Since %s</string>
    <string name="from_sold_date">From %s\nSold on %s</string>
    <string name="in_charge_agent">In-charge agent</string>
    <string name="unknown_agent">Unknown agent</string>
    <string name="media_description">Real estate media</string>
    <string name="surface_description">Surface logo</string>
    <string name="number_of_room_description">Number of rooms logo</string>
    <string name="number_of_bathroom_description">Number of bathrooms logo</string>
    <string name="number_of_bedroom_description">Number of bedrooms logo</string>
    <string name="market_description">Market logo</string>
    <string name="location_description">Location logo</string>
    <string name="agent_description">Agent logo</string>
    <string name="map_description">Real estate location map</string>

    <string name="filter_photo">Photo</string>
    <string name="filter_sale_status">Sale status</string>

    <string name="filter_type_dialog_title">Filter by type</string>
    <string name="filter_price_dialog_title">Filter by price</string>
    <string name="filter_surface_dialog_title">Filter by surface</string>
    <string name="filter_photo_dialog_title">Filter by photo count</string>
    <string name="filter_poi_dialog_title">Filter by point of interest</string>
    <string name="filter_sale_dialog_title">Filter by sale status</string>
    <string name="filter_price_range">From %d to %d Dollars</string>
    <string name="filter_price_range_short">%d - %d $</string>
    <string name="filter_surface_range">From %d to %d square meters</string>
    <string name="filter_surface_range_short">%d - %d m²</string>
    <string name="filter_photo_count_range">From %d to %d photos</string>
    <string name="filter_photo_count_range_short">%d - %d photos</string>
    <string name="filter_available_all">All available</string>
    <string name="filter_available_from">Available from %s</string>
    <string name="filter_available_until">Available until %s</string>
    <string name="filter_available_between">Available %s - %s</string>
    <string name="filter_sold_all">All sold</string>
    <string name="filter_sold_from">Sold from %s</string>
    <string name="filter_sold_until">Sold until %s</string>
    <string name="filter_sold_between">Sold %s - %s</string>
    <string name="available_estates_only">Available estates only</string>
    <string name="sold_estates_only">Sold estates only</string>
    <string name="from">From</string>
    <string name="until">Until</string>
    <string name="apply_filter">Apply</string>
    <string name="reset_filter">Reset</string>
    <string name="cancel_filter">Cancel</string>
</resources>
