<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <item
        android:id="@+id/main_menu_add_estate"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_item_add"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/main_menu_edit_estate"
        android:icon="@drawable/ic_edit"
        android:title="@string/menu_item_edit"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true"
        />
    <item
        android:id="@+id/main_menu_filter_estate"
        android:icon="@drawable/ic_filter_list"
        android:title="@string/menu_item_filter"
        app:showAsAction="ifRoom"
        />
</menu>