<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <RadioGroup
        android:id="@+id/filter_sale_radio_grp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <RadioButton
            android:id="@+id/filter_available_estates_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_estates_only"
            />

        <RadioButton
            android:id="@+id/filter_sold_estates_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/sold_estates_only"
            />
    </RadioGroup>

    <!--
        The input shouldn't be focusable as it is not directly editable.
        But, CLEAR_TEXT mode make the end Drawable visible only if the view has focus.
        And the Drawable should be visible when the input is not empty (whatever the focus).
    -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filter_start_date_lyt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/from"
        android:labelFor="@id/filter_start_date_input"
        android:visibility="gone"
        app:endIconDrawable="@drawable/ic_cancel"
        app:endIconMode="custom"
        app:layout_constraintEnd_toStartOf="@id/filter_end_date_lyt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_sale_radio_grp"
        tools:visibility="visible"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filter_start_date_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filter_end_date_lyt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/until"
        android:labelFor="@id/filter_end_date_input"
        android:visibility="gone"
        app:endIconDrawable="@drawable/ic_cancel"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/filter_start_date_lyt"
        app:layout_constraintTop_toTopOf="@id/filter_start_date_lyt"
        tools:visibility="visible"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filter_end_date_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>